--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "webpack --mode production",
     "start": "webpack-dev-server --open --mode development",
     "format": "prettier --write '{*.js,src/**/*.{js,jsx}}'",
-    "lint": "eslint src/ --fix"
+    "lint": "eslint src/ --fix",
+    "heroku-postbuild": "echo Skip build on Heroku"
   },
   "keywords": [],
   "author": "Santiago Pascual Plaus",
@@ -60,5 +61,6 @@
   "node": {
     "fs": "empty",
     "child_process": "empty"
-  }
+  },
+  "heroku-run-build-script": true
 }
