--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "webpack --mode production",
     "start": "webpack-dev-server --open --mode development",
     "format": "prettier --write '{*.js,src/**/*.{js,jsx}}'",
-    "lint": "eslint src/ --fix",
-    "heroku-postbuild": "echo Skip build on Heroku"
+    "lint": "eslint src/ --fix"
   },
   "keywords": [],
   "author": "Santiago Pascual Plaus",
