--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "openWeather react app",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode production",
-    "start": "webpack-dev-server --open --mode development",
+    "start": "node server.js",
+    "heroku-postbuild": "webpack -p",
     "format": "prettier --write '{*.js,src/**/*.{js,jsx}}'",
     "lint": "eslint src/ --fix"
   },
