--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=production node server.js",
+    "dev": "node server.js",
+    "build": "webpack -p",
     "heroku-postbuild": "webpack -p",
     "format": "prettier --write '{*.js,src/**/*.{js,jsx}}'",
     "lint": "eslint src/ --fix"
@@ -19,6 +21,7 @@
     "babel-loader": "^8.0.5",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^5.1.0",
+    "express": "^4.17.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.8.6",
