--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "openWeather react app",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production node server.js",
+    "start": "node server.js",
     "dev": "node server.js",
     "build": "webpack -p",
     "heroku-postbuild": "webpack -p",
